--- a/client/src/Components/PlanerHome.css
+++ b/client/src/Components/PlanerHome.css
@@ -1,7 +1,7 @@
 body{
     height: 98vh;
     font-family: 'Raleway', sans-serif;
-    background-color:#f3f4f4;
+    background-color:white;
 }
 
 h1 {
@@ -23,7 +23,7 @@ p{
     margin: auto;
     grid-template-columns: 10% repeat(7, 1fr);
     grid-template-rows: 10% 90%;
-    border: #777777 2px solid;
+    border: #f3f4f4 2px solid;
     text-align: center;
 }
 
@@ -31,8 +31,8 @@ p{
     display: grid;
     grid-row: span 1;
     grid-column: span 1;
-    border: #777777 1px solid;
-    padding: 10px;
+    border:  #f3f4f4 1px solid;
+    position: relative;
 }
 .day-row{
     display: grid;
@@ -40,24 +40,35 @@ p{
     grid-column: span 8;
     grid-template-columns: 10% repeat(7, 1fr);
     grid-template-rows: 1fr;
-    border: #777777 1px solid;
+    background: #ECE3E2 ;
 }
 .time-col{
     display: grid;
     grid-row: span 1;
     grid-column: span 1;
     position: relative;
-    border: #777777 1px solid;
+    background: #FBF8CE;
+    border:  #f3f4f4 1px solid;
 }
-.start-time{
-    text-align: center;
-    padding-top: 10px;
+.time-slot{
+    position: absolute;
+    right:25%;
+    left: 25%;
     height: auto;
 }
 
-.end-time{
+
+.task-block{
+    display: block;
+    position: absolute;
+    width: 100%;
+}
+
+.center-box{
     text-align: center;
-    position: relative;
-    top: 90%;
-    height: auto;
+    position: absolute;
+    top:50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width:100%;
 }
