--- a/client/src/Components/Popup.css
+++ b/client/src/Components/Popup.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(#000000, .8);
+    background-color: rgba(0,0,0, .7);
     z-index: 9999;
     opacity: 0;
     visibility: hidden;
@@ -18,7 +18,7 @@
     width: 70%;
     height: 80%;
     background-color: white;
-    box-shadow: 0 2rem 4rem rgba(black, .2);
+    box-shadow: 0 2rem 4rem rgba(0,0,0, .2);
     border-radius: 3px;
     display: table;
     overflow: hidden;
@@ -31,13 +31,12 @@
 .popup:target {
     opacity: 1;
     visibility: visible;
-    top: 50%;
-    left: 50%;
 }
 
 .popup:target .popup__content {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
+    position: absolute;
     top: 50%;
     left: 50%;
 }
