--- a/client/src/Components/PlannerHome.css
+++ b/client/src/Components/PlannerHome.css
@@ -4,26 +4,14 @@ body{
     background-color:white;
 }
 
-h1 {
-    font-size: 40px;
-}
-  
-h2{
-    font-size: 30px;
-}
-  
-p{
-    font-size: 14px;
-}
-
 .planner-box{
     display: grid;
     height: 90vh;
-    width: 90%;
-    margin: auto;
-    grid-template-columns: 10% repeat(7, 1fr);
-    grid-template-rows: 10% 90%;
-    border: #f3f4f4 2px solid;
+    width: 70%;
+    margin-left:20%;
+    grid-template-columns: 8% repeat(7, 1fr);
+    grid-template-rows: 8% 92%;
+    border: #f3f4f4 0.2rem solid;
     text-align: center;
 }
 
@@ -31,14 +19,14 @@ p{
     display: grid;
     grid-row: span 1;
     grid-column: span 1;
-    border:  #f3f4f4 1px solid;
+    border:  #f3f4f4 0.1rem solid;
     position: relative;
 }
 .day-row{
     display: grid;
     grid-row: span 1;
     grid-column: span 8;
-    grid-template-columns: 10% repeat(7, 1fr);
+    grid-template-columns: 8% repeat(7, 1fr);
     grid-template-rows: 1fr;
     background: #ECE3E2 ;
 }
@@ -48,12 +36,12 @@ p{
     grid-column: span 1;
     position: relative;
     background: #FBF8CE;
-    border:  #f3f4f4 1px solid;
+    border:  #f3f4f4 0.1rem solid;
 }
 .time-slot{
     position: absolute;
-    right:25%;
-    left: 25%;
+    transform: translate(-50%, 0%);
+    left:50%;
     height: auto;
 }
 
@@ -62,13 +50,4 @@ p{
     display: block;
     position: absolute;
     width: 100%;
-}
-
-.center-box{
-    text-align: center;
-    position: absolute;
-    top:50%; 
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width:100%;
 }
