--- a/client/src/Components/Popup.css
+++ b/client/src/Components/Popup.css
@@ -12,14 +12,14 @@
 }
 
 .popup__content {
-    font-size: 14px;
+    font-size: 1.6rem;
     color: #777777;
     line-height: 1.5;
     width: 70%;
     height: 80%;
     background-color: white;
     box-shadow: 0 2rem 4rem rgba(0,0,0, .2);
-    border-radius: 3px;
+    border-radius: 0.3rem;
     display: table;
     overflow: hidden;
     opacity: 0;
@@ -46,7 +46,7 @@
     position: absolute;
     top: 2.5rem;
     right: 2.5rem;
-    font-size: 3rem;
+    font-size: 4rem;
     text-decoration: none;
     display: inline-block;
     transition: all .2s;
