--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,14 @@ h1{
     font-size: 5rem;
 }
 
+h2{
+    font-size: 4rem;
+}
+
+h3{
+    font-size: 2.5rem;
+}
+
 p{
     font-size: 1.5rem;
 }
@@ -32,4 +40,13 @@ p{
     left: 50%;
     transform: translate(-50%, -50%);
     width:100%;
+}
+
+.center-text{
+    text-align: center;
+    padding: 0.5rem;
+}
+
+.big-bottom{
+    padding-bottom: 3rem;
 }
