--- a/client/src/Components/PlannerHome.css
+++ b/client/src/Components/PlannerHome.css
@@ -3,16 +3,34 @@ body{
     font-family: 'Raleway', sans-serif;
     background-color:white;
 }
+.planner-out-box{
+    display: grid;
+    width: 98vw;
+    height: 85vh;
+    grid-template-columns: 1fr 6fr;
+    grid-gap: 2rem;
+    grid-template-rows: 1fr;
+}
 
 .planner-box{
     display: grid;
-    height: 90vh;
-    width: 70%;
-    margin-left:20%;
+    height: 95%;
+    width: 85%;
     grid-template-columns: 8% repeat(7, 1fr);
     grid-template-rows: 8% 92%;
+    grid-row: span 1;
+    grid-column: span 1;
     border: #f3f4f4 0.2rem solid;
     text-align: center;
+}
+
+.plannerNew-box{
+    display: grid;
+    height: 95%;
+    width: 85%;
+    margin:auto;
+    grid-row: span 1;
+    grid-column: span 1;
 }
 
 .day-col{
@@ -40,7 +58,7 @@ body{
 }
 .time-slot{
     position: absolute;
-    transform: translate(-50%, 0%);
+    transform: translate(-50%, -50%);
     left:50%;
     height: auto;
 }
