complete delete, add multiple tasks in the same page without reloading

--- a/client/src/Components/PlannerHome.css
+++ b/client/src/Components/PlannerHome.css
@@ -69,3 +69,12 @@ body{
     position: absolute;
     width: 100%;
 }
+
+.task-block-link{
+    color: #777777;
+    text-decoration: none;
+}
+
+.task-block-link:hover{
+    text-decoration: underline;
+}
